--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,13 +34,14 @@ jobs:
           CF_API_KEY: ${{ secrets.USER_TOKEN }}
           # use image registry integration - the name of the integration used for pulling information on the image.
           CF_CONTAINER_REGISTRY_INTEGRATION: "docker-lr"
-
           # report image 
           CF_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/codefresh-report-image-github-action:${{ github.sha }}
           # integration with
           CF_ENRICHERS: "jira, git"
-          # use githug token
+ 
+          # use github token
           CF_GITHUB_TOKEN: ${{ secrets.CF_GITHUB_TOKEN }}    
+          
           # use jira integration - jira is the name of the integration created in codefresh argo platform.
           CF_JIRA_INTEGRATION: "jira-lr" 
           CF_JIRA_MESSAGE: "A message with embedded issue ( i.e. FT-50 ) that would be use query jira for the ticket "
