--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,7 +48,7 @@ jobs:
           CF_JIRA_MESSAGE: "A message with embedded issue ( i.e. FT-50 ) that would be use query jira for the ticket "
           # a specified prefix for finding the jira issue 
           CF_JIRA_PROJECT_PREFIX: "FT"
-        uses: codefresh-io/codefresh-report-image@latest
+        uses: codefresh-io/codefresh-report-image@0.0.156
         
         
 
