--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,7 +45,7 @@ jobs:
           CF_GITHUB_TOKEN: ${{ secrets.CF_GITHUB_TOKEN }}    
           
           # use jira integration - jira is the name of the integration created in codefresh argo platform.
-          CF_JIRA_INTEGRATION: "jira-lr" 
+          CF_JIRA_INTEGRATION: "jira-intg" 
           CF_JIRA_MESSAGE: "A message with embedded issue ( i.e. FT-50 ) that would be use query jira for the ticket "
           # a specified prefix for finding the jira issue 
           CF_JIRA_PROJECT_PREFIX: "FT"
