--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,8 +30,8 @@ jobs:
       - name: report image by action
         with:
           # Specify cluster app-proxy
-          # CF_RUNTIME_NAME: 'codefresh-hosted'
-          CF_HOST: "${{ secrets.CF_RUNTIME_HOST }}"
+          CF_RUNTIME_NAME: 'codefresh-hosted'
+          #CF_HOST: "${{ secrets.CF_RUNTIME_HOST }}"
           CF_API_KEY: ${{ secrets.USER_TOKEN }}
           # use image registry integration - the name of the integration used for pulling information on the image.
           CF_CONTAINER_REGISTRY_INTEGRATION: "docker-lr"
